Mar 06, 2023
  updated EfoMapper to limit EFO terms to EFO terms appearing in GWAS data

Mar 02, 2023
  updated EfoBulkLoad to also load synonyms

Feb 17, 2023
  updated build.gradle to be gradle 6.x + compatible
  updated CL source to CL release v2023-02-15
  DoQC: optimized code

Jan 20, 2023
  updated source for CL ontology
  removed unused jar dependency
  suppressed dag deletion for malformed obo files

Nov 01, 2022
  DO-QC: added extensive qc of MESH ids

Oct 25, 2022
  EfoBulkLoad: allows to bulk load EFO/MONDO synonyms from a file

Oct 05, 2022
  OmimPsCustomDoTermMapper: tune up (to handle situation where one OMIM:PS is associated with multiple RDO terms)

Aug 26, 2022
  parser: tuned up logging

Aug 01, 2022
  parser: better handling of MESH ids
  EFO-to-RDO mapper: finished EFO-to-MP and EFO-to-HP mappers

Jul 26, 2022
  fix to prevent erroneous deletion of dags / obsoletion of terms
  MP ontology: added loading of ORCID ids into 'created_by' field
  EFO-to-RDO mapper: refactored code to allow adding EFO-to-MP and EFO-to-HP mappers in the future

Jul 22, 2022
  added EFO-to-RDO mapper

Jun 21, 2022
  TaxonConstraints: fixed a bug preventing proper generation and cleanup of Not4Curation synonyms for GO terms

Jun 06, 2022
  DO qc: updated loading of term definitions

Mar 25, 2022
  go constraints: tuned up logging

Mar 24, 2022
  updated rat lineage (NCBI taxonomy)
  go constraints: switched to new source files (old source files no longer available)

Mar 17, 2022
  deployed OmimPsCustomDoTermMapper, to populate table OMIM_PS_CUSTOM_DO

Mar 08, 2022
  do qc: implemented checking of OMIM:PS ids (if they are assigned to the same terms in RGD as they are in DO)

Feb 14, 2022
  parser: updated to allow loading of MONDO ontology

Feb 10, 2022
  DO qc: fixed handling of UTF-8 characters

Jan 04, 2022
  obo exporter: config fix (was using retired ftp://ftp.rgd.mcw.edu)

Dec 20, 2021